[gd_scene load_steps=36 format=3 uid="uid://dirgwundhi3xq"]

[ext_resource type="Script" path="res://scenes/game_objects/player/player.gd" id="1_6xqvq"]
[ext_resource type="PackedScene" uid="uid://5vpw8p5qkrgg" path="res://scenes/effects/asteroid_explosion.tscn" id="2_tpohu"]
[ext_resource type="Texture2D" uid="uid://8kyqxajd61rw" path="res://scenes/game_objects/player/player_fire.png" id="3_8n86h"]
[ext_resource type="Texture2D" uid="uid://dc763s87fheu4" path="res://scenes/game_objects/player/player_idle.png" id="3_bs7db"]
[ext_resource type="Texture2D" uid="uid://yxcaoxiptd5d" path="res://scenes/game_objects/player/player_movement.png" id="4_0ftfx"]
[ext_resource type="Texture2D" uid="uid://ccdqt1ucer72s" path="res://scenes/game_objects/player/ship_cannon.png" id="4_6y5io"]
[ext_resource type="Texture2D" uid="uid://cdj7nlthlqbl6" path="res://scenes/game_objects/player/engine_beam.png" id="6_j6rsd"]
[ext_resource type="PackedScene" uid="uid://dqf2fq7p7ip" path="res://scenes/components/health_component.tscn" id="7_arbtb"]
[ext_resource type="PackedScene" uid="uid://bcmna6wa42j0q" path="res://scenes/components/hurtbox_component.tscn" id="8_nnxdr"]
[ext_resource type="PackedScene" uid="uid://ccxlek7ow2v2u" path="res://scenes/game_objects/player/ability_system.tscn" id="10_kvdmg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xmgvu"]
atlas = ExtResource("3_8n86h")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7upt"]
atlas = ExtResource("3_8n86h")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4ja4"]
atlas = ExtResource("3_8n86h")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc1a8"]
atlas = ExtResource("3_8n86h")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7m84a"]
atlas = ExtResource("3_8n86h")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g4l0"]
atlas = ExtResource("3_8n86h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eyio"]
atlas = ExtResource("3_8n86h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61h4p"]
atlas = ExtResource("3_8n86h")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q07au"]
atlas = ExtResource("3_8n86h")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou81t"]
atlas = ExtResource("3_8n86h")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn5mh"]
atlas = ExtResource("3_bs7db")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x6ue"]
atlas = ExtResource("3_bs7db")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp7gt"]
atlas = ExtResource("3_bs7db")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uepmm"]
atlas = ExtResource("3_bs7db")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mg0r"]
atlas = ExtResource("3_bs7db")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjy8d"]
atlas = ExtResource("3_bs7db")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7g2h"]
atlas = ExtResource("3_bs7db")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdoh2"]
atlas = ExtResource("3_bs7db")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcu3r"]
atlas = ExtResource("4_0ftfx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgdld"]
atlas = ExtResource("4_0ftfx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ui5fv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmgvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7upt")
}],
"loop": true,
"name": &"blaster_charge_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4ja4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc1a8")
}],
"loop": true,
"name": &"blaster_charge_2",
"speed": 12.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m84a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g4l0")
}],
"loop": true,
"name": &"blaster_charge_3",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eyio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61h4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q07au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou81t")
}],
"loop": false,
"name": &"player_fire",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn5mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x6ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp7gt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uepmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjy8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7g2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdoh2")
}],
"loop": true,
"name": &"player_idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcu3r")
}],
"loop": true,
"name": &"player_move_d",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgdld")
}],
"loop": true,
"name": &"player_move_h&v",
"speed": 12.0
}]

[sub_resource type="Gradient" id="Gradient_gkmv5"]
colors = PackedColorArray(1, 1, 1, 1, 0.474886, 0.77348, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_e3u53"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gwuc5"]
radius = 35.0

[sub_resource type="CircleShape2D" id="CircleShape2D_80xxi"]
radius = 22.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("fire_position", "ship_cannon", "ship_body", "hurt_box")]
z_index = 1
motion_mode = 1
script = ExtResource("1_6xqvq")
fire_position = NodePath("Ship_Cannon/fire_position")
ship_cannon = NodePath("Ship_Cannon")
ship_body = NodePath("Ship_Body")
hurt_box = NodePath("HurtboxComponent/HurtBox")
explosion_effect = ExtResource("2_tpohu")

[node name="Ship_Body" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_ui5fv")
animation = &"blaster_charge_3"
autoplay = "player_idle"

[node name="EngineParticles" type="CPUParticles2D" parent="Ship_Body"]
unique_name_in_owner = true
z_index = -1
rotation = -3.14159
amount = 5
lifetime = 0.5
speed_scale = 5.0
texture = ExtResource("6_j6rsd")
gravity = Vector2(0, 0)
color_ramp = SubResource("Gradient_gkmv5")

[node name="Ship_Cannon" type="Sprite2D" parent="."]
z_index = 2
texture = ExtResource("4_6y5io")

[node name="fire_position" type="Node2D" parent="Ship_Cannon"]
position = Vector2(0, -27)
rotation = 0.00410047

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e3u53")

[node name="PickupGrabber" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupGrabber"]
shape = SubResource("CircleShape2D_gwuc5")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("8_nnxdr")]
collision_mask = 5
health_component = NodePath("../HealthComponent")

[node name="HurtBox" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_80xxi")

[node name="HealthComponent" parent="." instance=ExtResource("7_arbtb")]
unique_name_in_owner = true
max_health = 3.0

[node name="ability_system" parent="." instance=ExtResource("10_kvdmg")]
unique_name_in_owner = true
